# 3DSMC

./: .gitignore  README.md
Exercise-1/: VirtualSensor.h  main.cpp
Exercise-2/: ImplicitSurface.h  MarchingCubes.h  main.cpp
Exercise-3/: ProcrustesAligner.h
Exercise-4/: CMakeLists.txt  dragon.cpp  gaussian.cpp  surface.cpp
Exercise-4/result/: dragon.txt  gau.txt  surface.txt
Exercise-5/: CMakeLists.txt  ICPOptimizer.h  PointCloud.h
